--- a/src/SpotifyClientService/SpotifyClientService.csproj
+++ b/src/SpotifyClientService/SpotifyClientService.csproj
@@ -6,4 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.10" />
+      <PackageReference Include="SpotifyAPI.Web" Version="7.2.1" />
+      <PackageReference Include="SpotifyAPI.Web.Auth" Version="7.2.1" />
+    </ItemGroup>
+
 </Project>
