feat: Phase 2A - Integrate IncrementalSyncOrchestrator with PlaybackWorker
Created background sync daemon that runs alongside playback tracking:

**New Components:**
- SyncWorker.cs - Background service for sync orchestration
  - Checks if initial full sync is needed
  - Runs full sync with progress logging
  - Schedules incremental syncs every 30 minutes
  - Configurable via appsettings.json

**Configuration:**
- Added Sync section to appsettings.json.template:
  - EnableInitialFullSync (default: true)
  - EnableIncrementalSync (default: true)
  - IncrementalIntervalMinutes (default: 30)

**Dependency Injection Updates:**
- Registered IUnitOfWork, ISyncStateRepository
- Registered ISyncService, IncrementalSyncOrchestrator
- Added SyncWorker as hosted service

**Repository Refactoring:**
- Moved ISyncStateRepository to Interfaces folder
- Moved SyncStateRepository to Implementations folder
- Simplified interface to GetByKeyAsync/AddAsync/UpdateAsync
- Updated namespaces to match folder structure

**Entity Updates:**
- SyncState: Updated properties to match orchestrator needs
  - Added StateKey (unique identifier)
  - Renamed properties for consistency
  - Added Status enum support
- SyncStatus enum: Added Cancelled and RateLimited values

**DbContext Updates:**
- Updated SyncState configuration for new schema
- Added unique index on StateKey
- Added index on Status for queries

**Features:**
- ✅ Daemon runs initial full sync on first startup
- ✅ Resumes from checkpoint if interrupted
- ✅ Handles rate limits automatically (waits and continues)
- ✅ Runs incremental syncs periodically
- ✅ Playback tracking continues even if sync is rate limited
- ✅ All sync progress logged to console and file

**Next Steps:**
- Create migration for sync_states table
- Test initial full sync workflow
- Add Web UI sync status page (Phase 2B)

--- a/src/SpotifyTools.PlaybackWorker/appsettings.json.template
+++ b/src/SpotifyTools.PlaybackWorker/appsettings.json.template
@@ -12,6 +12,11 @@
     "EnableErrorAlerts": true,
     "MaxConsecutiveErrors": 5
   },
+  "Sync": {
+    "EnableInitialFullSync": true,
+    "EnableIncrementalSync": true,
+    "IncrementalIntervalMinutes": 30
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
