--- a/src/SpotifyTools.PlaybackWorker/SpotifyTools.PlaybackWorker.csproj
+++ b/src/SpotifyTools.PlaybackWorker/SpotifyTools.PlaybackWorker.csproj
@@ -22,5 +22,6 @@
     <ProjectReference Include="..\SpotifyTools.Data\SpotifyTools.Data.csproj" />
     <ProjectReference Include="..\SpotifyTools.Domain\SpotifyTools.Domain.csproj" />
     <ProjectReference Include="..\SpotifyClientService\SpotifyClientService.csproj" />
+    <ProjectReference Include="..\SpotifyTools.Sync\SpotifyTools.Sync.csproj" />
   </ItemGroup>
 </Project>
