Reorganize documentation into docs/ folder and archive SQL scripts
- Moved 20 documentation files to docs/ folder
- Moved 5 SQL helper scripts to archive/sql/ folder
- Added archive/sql/README.md to explain archived scripts
- Updated main README.md with links to all documentation
- Root directory now cleaner with only README.md and CLAUDE.md

--- a/src/SpotifyTools.PlaybackWorker/appsettings.json.template
+++ b/src/SpotifyTools.PlaybackWorker/appsettings.json.template
@@ -12,6 +12,17 @@
     "EnableErrorAlerts": true,
     "MaxConsecutiveErrors": 5
   },
+  "EmailAlerts": {
+    "Enabled": true,
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "UseSsl": true,
+    "SenderEmail": "YOUR_EMAIL@gmail.com",
+    "SenderPassword": "YOUR_APP_PASSWORD",
+    "RecipientEmail": "YOUR_EMAIL@gmail.com",
+    "AlertOnAuthFailure": true,
+    "AlertOnConsecutiveErrors": true
+  },
   "Sync": {
     "EnableInitialFullSync": true,
     "EnableIncrementalSync": true,
