--- a/src/SpotifyTools.PlaybackWorker/SpotifyTools.PlaybackWorker.csproj
+++ b/src/SpotifyTools.PlaybackWorker/SpotifyTools.PlaybackWorker.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.14.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
